2008-08-18 Andreas Schmitz <schmitz@lat-lon.de>
	* scripts/openjump.sh: Fixed the startup script to include the default
	plugins file even in development environments.

2008-08-04 Andreas Schmitz <schmitz@lat-lon.de>
      * src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java:
      Fixed null pointer when reading from project file.

2008-07-16 Andreas Schmitz <schmitz@lat-lon.de>
      * build.xml: Added the classpath manifest entry.

2008-07-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/BasicStyle.java:
      Re-enabled the styling of basic style + vertex style.

2008-07-10 mentaer <sstein@geo.uzh.ch>
      moved all "advanced" plugin functionality to the "default-plugins.xml" file. 
      Basic functionality (such as file i/o, viewing and styling) is still loaded 
      from the OpenJumpConfiguration file.

2008-07-06 mentaer <sstein@geo.uzh.ch>
      added new command-line parameter "-default-plugins" to load a "second"
      properties file. Plugins read from a properties file with 
      "-default-plugins" will be loaded before the plugins from 
      "-workbench-properties". It is intended to deliver a "default-plugins.xml"
      in the /bin/ directory of OpenJUMP. (Note: using two properties files
      enables to separate general OJ plugins from own functions)
      changes in:
      core/trunk/src/com/vividsolutions/jump/workbench/JUMPWorkbench.java
      core/trunk/src/com/vividsolutions/jump/workbench/WorkbenchPropertiesFile.java
      and in the start-up scripts
      
2008-07-05 beckerl <becker.larry@gmail.com>
      Added Multi-Ring-Buffer Function for selected objects (a similar function 
      can be found in ArcGIS:
      http://webhelp.esri.com/arcgisdesktop/9.2/index.cfm?TopicName=multiple_ring_buffer_(analysis) )
      new class:
	  core/trunk/src/org/openjump/core/ui/plugin/tools/MultiRingBufferSelectedPlugIn.java